# simpleflakes

./: .eslintrc.js  .gitignore  .nycrc  .swcrc  .swcrc-cjs  .travis.yml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  LICENSE.txt  README.md  eslint.config.js  index.d.ts  index.js  package-lock.json  package.json  snowflake-announcement.md  test-commonjs.js  test-compatibility.js  test-esmodules.mjs  test-typescript.ts  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
.husky/: pre-commit
benchmark/: run.js
docs/: FIRST_PRINCIPLES.md  SNOWFLAKE_ANNOUNCEMENT.md
lib/: simpleflake.js  simpleflakes-legacy.js  simpleflakes-wasm.js  simpleflakes.js
scripts/: benchmark-badge.js  generate-release-notes.js  test-package-smoke.js
simpleflakes-wasm/: Cargo.toml  README.md
simpleflakes-wasm/src/: lib.rs
src/: simpleflakes.ts
tests/: SimpleFlakeStruct.test.js  SimpleflakeStruct.test.js  api.test.js  binary.test.js  extractBits.test.js  integration.test.js  parseSimpleflake.test.js  runtime.test.js  simpleflake.test.js  simpleflakes-legacy.tests..js  simpleflakes-wasm.tests.js  simpleflakes.tests.js  test-constants.js  test.js
